Feat: adicionado footer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <a href="https://br.linkedin.com/in/rodrigo-neves-ottoboni-dias">Linkedin</a>
     <a href="https://instagran.com">Instagran</a>
     <a href="https://www.google.com/">Google</a>
+
 </body>
 
-</html
+<footer>© 2026 Rodrigo Neves ®</footer>
+
+</html>
